--- a/index.html
+++ b/index.html
@@ -1,11 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie X</title>
+    <script src="https://unpkg.com/alpinejs" defer></script>
+
+    <script src="store/customer.js"></script>
+    <script src="store/location.js"></script>
+    <script src="store/movie.js"></script>
+    <script src="store/order.js"></script>
+    <script src="store/ticket.js"></script>
 </head>
+
 <body>
+
+   
+
+
+
+
+
+
+
+
+    <pre>
+    - Location
+    -- Name
+    -- Number Seats
+    -- Time Slots
+
+    - Build a movie databas
+    -- Title
+    -- Cast1
+    -- Runtime
+    -- Genre
+    -- Ratings
+    -- Description
+    -- Image
+    -- Trailer
+    -- Release Date
+
+    - Ticket
+    -- Time
+    -- Price
+    -- Movie
+    -- Seat
     
+    - Customer
+    -- Name
+    -- Email
+    -- Phone
+    -- Tickets
+
+    - Order
+    -- Credit Card
+    -- Tickts
+</pre>
 </body>
+
 </html>
