--- a/TaskList.html
+++ b/TaskList.html
@@ -16,17 +16,48 @@
 
 <body>
 
-    <div x-data="home">
+   
 
-    </div>
 
-    <script>
-        document.addEventListener('alpine:init', () => {
-            Alpine.data('home', () => ({
 
-            }))
-        })
-    </script>
+
+
+
+
+
+    <pre>
+    - Location
+    -- Name
+    -- Number Seats
+    -- Time Slots
+
+    - Build a movie databas
+    -- Title
+    -- Cast
+    -- Runtime
+    -- Genre
+    -- Ratings
+    -- Description
+    -- Image
+    -- Trailer
+    -- Release Date
+
+    - Ticket
+    -- Time
+    -- Price
+    -- Movie
+    -- Seat
+    
+    - Customer
+    -- Name
+    -- Email
+    -- Phone
+    -- Tickets
+
+    - Order
+    -- Credit Card
+    -- Tickts
+</pre>
 </body>
 
 </html>
