--- a/checkout.html
+++ b/checkout.html
@@ -16,13 +16,13 @@
 
 <body>
 
-    <div x-data="home">
+    <div x-data="checkout">
 
     </div>
 
     <script>
         document.addEventListener('alpine:init', () => {
-            Alpine.data('home', () => ({
+            Alpine.data('checkout', () => ({
 
             }))
         })
