--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 
     <div x-data="home">
 
+        <div>
+            <h1 x-text="$store.location.name"></h1>
+        </div>
+
     </div>
 
     <script>
